ARROW-11161: [C++][Python] Add stream metadata

Extend the InputStream API to allow reading metadata.

Extend the FileSystem API to allow setting metadata when creating an output stream or file.

Implement metadata reading and writing in the S3 filesystem.
A few metadata keys are supported such as "Content-Type" and "Expires".

Closes #10295 from pitrou/ARROW-11161-stream-metadata

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>